# ultra_type

./: .gitignore  README.md  click.py  pyproject.toml  requirements.txt  run_setup.sh  run_tests.sh  sweep.yaml
.github/workflows/: python-app.yml
sandbox/: five_by_five.py  hebrew_text.py  margaret.txt  option_list.py  prevent.py  select.tcss  text_align.tcss
tests/: hebrew_test_data.json  stats.py  test_controller.py  test_database.py  test_keystroke.py  test_language.py  test_model.py  test_practice_controller.py  test_statistics.py  test_user.py  test_view.py  test_view_practice.py
ultra_type/: clicker.py  controller.py  curses_mock.py  database.py  hebrew_common_words.json  keystroke.py  language.py  main.py  model.py  out.txt  practice_controller.py  statistics.py  test_model.py  view.py  view_main.py  view_main.tcss  view_options.py  view_options.tcss  view_practice.py  view_stats.py  view_stats.tcss
ultra_type/data/: english_common_words.json
ultra_type/data/lessons/: Peterson-1-hebrew.txt  Peterson-2-english.txt  Peterson-pro-hamas-protests.txt  dictionary.json  lesson1.txt  lesson2.txt  margaret.txt  out.txt
ultra_type/languages/: lang_english.py  lang_hebrew.py  language.py
ultra_type/practices/: practice.py
