[tool.poetry]
name = "ultra-type"
version = "0.1.0"
description = ""
authors = ["Eran Heres <eran.heres@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.2"
pytest = "^7.4.3"
pylint = "^3.0.2"
tabulate = "^0.9.0"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
